# GameFrame

./: CMakeLists.txt  Cargo.toml  README.md  main.rs  package.json
config/: gameframe.conf
scripts/: check_deps.sh  configure.sh  detect_gpu.sh  detect_resolutions.sh  launch.sh  setup.sh  setup_env.sh  setup_xwayland.sh
src/: ai.rs  compositor.rs  gamemode.rs  gpu.rs  gui.rs  main.rs  mangohud.rs  scaling.rs  steam.rs  tty.rs  vkbasalt.rs
src/cpp/: compositor.cpp  compositor.hpp  frame_timer.cpp  frame_timer.hpp  opengl_render.hpp  opengl_renderer.cpp  vulkan_render.cpp  vulkan_render.hpp  wayland_backend.cpp  wayland_backend.hpp
src/js/: Renderer.js  config_manager.js  index.html  main.js  profile_manager.js  render.js  styles.css  system_info.js  tty_ui.js
src/python/: config_parser.py  isolation.py  system_info.py  telemetry.py  tty_ui.py
src/rust/: bindings.rs  cli.rs  compositor.rs  config.rs  isolation.rs  main.rs  system.rs  telemetry.rs
src/rust/gpu/: mod.rs  opengl.rs  vulcan.rs  vulkan.rs  wayland.rs
src/scripts/: setup_env.sh
systemu/: gameframe-tty.service
