[package]
name = "gameframe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }  # CLI parsing
sysinfo = "0.29"                                  # System info
log = "0.4"                                       # Logging
env_logger = "0.10"                               # Logging to file
nix = "0.26"                                      # Namespaces
anyhow = "1.0"                                    # Error handling

[features]
wayland = ["wlroots-sys"]
